Fix: 북마크 단어조회